--- a/public/css/payment.css
+++ b/public/css/payment.css
@@ -1,5 +1,5 @@
 /*------------------------------------*
-	$ RESET
+	$ SHIPPING
 *------------------------------------*/
 body {
   margin: 0;
@@ -926,173 +926,4 @@ body {
 .button-avatar img {
   -webkit-border-radius: 50%;
   border-radius: 50%;
-}
-.flash-message-container {
-  max-width: 1100px;
-  margin: auto;
-  display: none;
-  position: absolute;
-  left: 50%;
-  -webkit-transform: translate(-50%, 0%);
-  -moz-transform: translate(-50%, 0%);
-  -o-transform: translate(-50%, 0%);
-  -ms-transform: translate(-50%, 0%);
-  transform: translate(-50%, 0%);
-  width: 100%;
-}
-.flash-message {
-  text-align: center;
-  position: relative;
-  margin: 0 1rem;
-  padding: 1rem;
-}
-.flash-message.error {
-  background: #fae7c8;
-  color: #ce6637;
-}
-.flash-message.success {
-  background: #e8edd0;
-  color: #48970c;
-}
-.flash-message .text {
-  font-family: Arial;
-  font-size: 0.95rem;
-  letter-spacing: 1px;
-}
-.flash-message .fa {
-  position: absolute;
-  top: 0;
-  right: 0;
-  cursor: pointer;
-  padding: 1rem;
-}
-.reset {
-  max-width: 1100px;
-  margin: auto;
-  padding: 1rem;
-}
-.reset-title {
-  padding: 0.5rem 0 1.5rem 0;
-  color: #444;
-  font-family: 'Raleway';
-  font-weight: 700;
-  font-size: 1.25rem;
-}
-.reset-subtitle {
-  font-family: 'Roboto Condensed';
-  padding: 0.5rem 0;
-  letter-spacing: 0.5px;
-  text-transform: uppercase;
-  color: #6c7377;
-  font-size: 0.9rem;
-}
-.reset input {
-  margin: 0.5rem 0;
-  margin-bottom: 1.5rem;
-}
-.reset .loading {
-  text-align: center;
-  font-size: 1.5rem;
-  color: #aaa;
-  margin: 1rem;
-  display: none;
-}
-.reset .loading .fa {
-  -webkit-animation: 1.5s circle infinite;
-  -moz-animation: 1.5s circle infinite;
-  -o-animation: 1.5s circle infinite;
-  -ms-animation: 1.5s circle infinite;
-  animation: 1.5s circle infinite;
-}
-@-moz-keyframes circle {
-  0% {
-    -webkit-transform: rotate(0);
-    -moz-transform: rotate(0);
-    -o-transform: rotate(0);
-    -ms-transform: rotate(0);
-    transform: rotate(0);
-  }
-  50% {
-    -webkit-transform: rotate(-180deg);
-    -moz-transform: rotate(-180deg);
-    -o-transform: rotate(-180deg);
-    -ms-transform: rotate(-180deg);
-    transform: rotate(-180deg);
-  }
-  100% {
-    -webkit-transform: rotate(-360deg);
-    -moz-transform: rotate(-360deg);
-    -o-transform: rotate(-360deg);
-    -ms-transform: rotate(-360deg);
-    transform: rotate(-360deg);
-  }
-}
-@-webkit-keyframes circle {
-  0% {
-    -webkit-transform: rotate(0);
-    -moz-transform: rotate(0);
-    -o-transform: rotate(0);
-    -ms-transform: rotate(0);
-    transform: rotate(0);
-  }
-  50% {
-    -webkit-transform: rotate(-180deg);
-    -moz-transform: rotate(-180deg);
-    -o-transform: rotate(-180deg);
-    -ms-transform: rotate(-180deg);
-    transform: rotate(-180deg);
-  }
-  100% {
-    -webkit-transform: rotate(-360deg);
-    -moz-transform: rotate(-360deg);
-    -o-transform: rotate(-360deg);
-    -ms-transform: rotate(-360deg);
-    transform: rotate(-360deg);
-  }
-}
-@-o-keyframes circle {
-  0% {
-    -webkit-transform: rotate(0);
-    -moz-transform: rotate(0);
-    -o-transform: rotate(0);
-    -ms-transform: rotate(0);
-    transform: rotate(0);
-  }
-  50% {
-    -webkit-transform: rotate(-180deg);
-    -moz-transform: rotate(-180deg);
-    -o-transform: rotate(-180deg);
-    -ms-transform: rotate(-180deg);
-    transform: rotate(-180deg);
-  }
-  100% {
-    -webkit-transform: rotate(-360deg);
-    -moz-transform: rotate(-360deg);
-    -o-transform: rotate(-360deg);
-    -ms-transform: rotate(-360deg);
-    transform: rotate(-360deg);
-  }
-}
-@keyframes circle {
-  0% {
-    -webkit-transform: rotate(0);
-    -moz-transform: rotate(0);
-    -o-transform: rotate(0);
-    -ms-transform: rotate(0);
-    transform: rotate(0);
-  }
-  50% {
-    -webkit-transform: rotate(-180deg);
-    -moz-transform: rotate(-180deg);
-    -o-transform: rotate(-180deg);
-    -ms-transform: rotate(-180deg);
-    transform: rotate(-180deg);
-  }
-  100% {
-    -webkit-transform: rotate(-360deg);
-    -moz-transform: rotate(-360deg);
-    -o-transform: rotate(-360deg);
-    -ms-transform: rotate(-360deg);
-    transform: rotate(-360deg);
-  }
 }
