--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -42,6 +42,8 @@
 
 	{% block modal %} {% endblock %}
 
+	<script type="text/javascript" src="/js/account-menu.js"></script>
+
 	{% block scripts %} {% endblock %}
 
 </body>
