--- a/app/views/user/checkout/payment.html
+++ b/app/views/user/checkout/payment.html
@@ -1,10 +1,25 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title>Payment</title>
-</head>
-<body>
+{% extends '../../partials/base.html' %}
 
-</body>
-</html>
+{% set path = 'payment' %}
+{% set title = 'Arte Manifiesto | Payment' %}
+
+{% block stylesheets %}
+	<link rel="stylesheet" type="text/css" href="/css/payment.css">
+{% endblock %}
+
+{% block elements %}
+	Payment
+{% endblock %}
+
+
+{% block scripts %}
+
+	<script>
+		var addresses = {{addresses|json|safe}};
+		console.log('addresses: ', addresses);
+	</script>
+
+	<script type="text/javascript" src="/js/vendor/jquery.min.js"></script>
+	<!-- // <script type="text/javascript" src="/js/shipping.js"></script> -->
+
+{% endblock %}
