--- a/public/src/stylus/shipping.styl
+++ b/public/src/stylus/shipping.styl
@@ -35,10 +35,11 @@
 			font-size .9rem
 			font-weight: 300;
 
-
 .shipping-form
 	box-shadow: none;
 	border none
+	border-top solid 1px #ddd
+	display none
 
 .button-solid
 	margin auto
