--- a/app/views/partials/profile.html
+++ b/app/views/partials/profile.html
@@ -49,7 +49,7 @@
 			<div class="empty">No tiene obras</div>
 		</div>
 		<div class="profile__element">
-			<section class="products"></section>
+			<section class="products no-filters"></section>
 			<div class="loading"><i class="fa fa-spinner"></i></div>
 			<div class="empty">No tine productos</div>
 		</div>
