delete websites view

--- a/app/views/pages/complete-profile.html
+++ b/app/views/pages/complete-profile.html
@@ -57,6 +57,11 @@
 					<span>Fecha de nacimiento</span>&nbsp;
 					<div>
 						<input class="input" type="date" name="birthday" placeholder="fecha-nacimiento">
+						<!-- <div class="date">
+								<input type="text" name="" maxlength="2" placeholder="DD">
+								<input type="text" name="" maxlength="2" placeholder="MM">
+								<input type="text" name="" maxlength="2" placeholder="YYYY">
+						</div> -->
 					</div>
 				</div>
 			</div>
