--- a/public/css/products.css
+++ b/public/css/products.css
@@ -693,6 +693,15 @@ body {
   text-transform: uppercase;
   min-width: 9rem;
 }
+.form-container .input-container >div {
+  -webkit-box-flex: 1;
+  -moz-box-flex: 1;
+  -o-box-flex: 1;
+  box-flex: 1;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+}
 .form-container .input-container .avatars {
   display: -webkit-box;
   display: -moz-box;
@@ -721,6 +730,23 @@ body {
 .form-container .button-solid {
   margin: 1.5rem auto;
   display: table;
+}
+@media (min-width: 900px) {
+  .input-container-inner {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: box;
+    display: flex;
+    -webkit-box-align: center;
+    -moz-box-align: center;
+    -o-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+    padding: 0.25rem;
+  }
 }
 .shipping-form {
   border: solid 1px #ddd;
