add manifest in account view

--- a/app/views/partials/account.html
+++ b/app/views/partials/account.html
@@ -74,7 +74,7 @@
                         </div>
                         <div class="input-container">
                             <label>manifiesto</label>
-                            <textarea class="input textarea" placeholder="" value="{{ user.biography }}"></textarea>
+                            <textarea class="input textarea" placeholder="">{{ user.biography }}</textarea>
                         </div>
                         <div class="input-container">
                             <label>pais</label>
