--- a/public/src/stylus/elements/inputs.styl
+++ b/public/src/stylus/elements/inputs.styl
@@ -94,6 +94,11 @@
 		align-items center
 		padding 2rem 1rem
 		border-bottom solid 1px #ddd
+		.checkbox-list
+			flex 1
+		&-inner
+			input
+				margin: .5rem 0 1rem 0;
 		label
 			color #585858
 			font-weight 600
